add example from ng material docs

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,13 +1,19 @@
-<h1>Http vs WebSocket Chat App</h1>
+<h1>Http vs WebSocket Chat App 2</h1>
 
 <head>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
 </head>
 
 <div>
-    <app-web-socket-chat></app-web-socket-chat>
+    <app-poc-tree-struture style="height: 500px; width: 500px;"></app-poc-tree-struture>    
 </div>
 
-<div>
-    <app-http-chat></app-http-chat>
-</div>
+<!-- 
+    <div>
+        <app-web-socket-chat></app-web-socket-chat>
+    </div>
+    
+    <div>
+        <app-http-chat></app-http-chat>
+    </div>
+-->
